private-dns-zone

--- a/app-scripts/app1.conf
+++ b/app-scripts/app1.conf
@@ -8,12 +8,12 @@ ProxyPreserveHost On
 ProxyPass /webvm !
 
 # Use when only IP Addresses are used - Section-15
-ProxyPass / http://10.1.11.241/
-ProxyPassReverse / http://10.1.11.241/
+# ProxyPass / http://10.1.11.241/
+# ProxyPassReverse / http://10.1.11.241/
 
 # Use the below when using Private DNS Section - Section-16
-#ProxyPass / http://applb.terraformguru.com/
-#ProxyPassReverse / http://applb.terraformguru.com/
+ProxyPass / http://applb.terraformguru.com/
+ProxyPassReverse / http://applb.terraformguru.com/
 
 DocumentRoot /var/www/html
 <Directory /var/www/html>
